scroll bar issue fix

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -49,7 +49,7 @@ body{
     color: #555;
     font-weight: 400;
     position: relative;
-    overflow-x: hidden;
+     /* overflow-x: hidden; */
 }
 
 h1, h2, h3, h4, h5, h6{
