Trivial yet significant css changes

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -126,9 +126,12 @@
 <section class="contact-section padding">
 <div class="container">
 <div class="row contact-wrap">
-<div class="col-md-7 xs-padding">
+<div class="col-md-12 xs-padding">
+    <div class="contact-info-image">
+        <img src="../../assets/img/contact.jpg" alt="Contact Us"/>
+    </div>
 <div class="contact-info">
-<h3>Get in touch</h3>
+<h1>GET IN TOUCH</h1>
 <p>We are happy to be in touch with you. You can reach us with any one of the following options.</p>
 <!-- <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Main has survived not only five centuries.</p> -->
 <ul>
