--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -72,7 +72,7 @@
 <div class="bottom-content-wrap row">
 <div class="col-sm-4">
 <div class="site-branding dot">
-    <a href="#"><img src="../../assets/img/logo.jpg" alt="Brand"></a>
+    <a  href="#"><img id="logo" src="../../assets/img/logo.jpg" alt="Brand"></a>
     <!-- <h2>Real Dream Trust</h2> -->
 </div>
 </div> 
@@ -99,21 +99,22 @@
 
 <router-outlet></router-outlet>
 <footer class="footer-section">
-<div class="container">
-<div class="row">
-<div class="col-md-6 sm-padding">
-
-</div>
-<div class="col-md-6 sm-padding">
-<ul class="footer-social">
-
-<li><a href="#">Terms</a></li>
-
-</ul>
-</div>
-</div>
-</div>
-</footer>
+    <div class="container">
+    <div class="row">
+    <div class="col-md-6 sm-padding">
+    
+    </div>
+    <div class="col-md-6 sm-padding">
+    <ul class="footer-social">
+    
+    <li><a href="#">Terms of Use</a></li>
+    <li><a href="#">Privacy Policy</a></li>
+    <li><a href="#">Contact Us</a></li>
+    </ul>
+    </div>
+    </div>
+    </div>
+    </footer> 
 <a data-scroll="" href="#header" id="scroll-to-top" style="display: block;"><i class="arrow_up"></i></a>
 
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../../assets/js/vendor/jquery-1.12.4.min.js"></script>
