--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -238,7 +238,9 @@
     <div class="col-md-6 xs-padding">
     <div class="about-content">
     <h2>WHO WE ARE</h2>
-    <p>Real Dream Trust(RD Trust) is a Public Charitable Trust. RD was started to help needy students on September 2010 by a group of volunteers from Anderson Higher Secondary School, Kanchipuram. The passion of educating needy grew and we have registered the group as trust in July 15, 2015 under Indian Trust Act, 1882.</p>
+    <p>Real Dream Trust(RD Trust) is a Public Charitable Trust.</p>
+    <p> RD was started to assist needy students for education on September 2010 by a group of volunteers from Anderson Higher Secondary School, Kanchipuram. </p>
+    <p> We have registered the group as trust in July 15, 2015 under Indian Trust Act, 1882.</p>
     
     </div>
     </div>
@@ -264,7 +266,7 @@
         </div>
         </div>
         </section>
-        <section class="team-section bd-bottom padding">
+        <!-- <section class="team-section bd-bottom padding">
             <div class="container">
             <div class="section-heading text-center mb-40">
             <h2>OUR HISTORY</h2>
@@ -346,10 +348,10 @@
     </ul>
     <a href="#" class="default-btn">Join With Us</a>
     </div>
-    </div>-->
+    </div>
     </div> 
     </div>
-    </section>
+    </section> -->
 <!-- <section class="blog-section bg-grey bd-bottom padding">
     <div class="container">
         <div class="section-heading text-center mb-40">
@@ -798,22 +800,7 @@
 </section> -->
 <!-- <app-contact id="contact"></app-contact>
     -->
-<footer class="footer-section">
-<div class="container">
-<div class="row">
-<div class="col-md-6 sm-padding">
 
-</div>
-<div class="col-md-6 sm-padding">
-<ul class="footer-social">
-
-<li><a href="#">Terms</a></li>
-
-</ul>
-</div>
-</div>
-</div>
-</footer> 
 <a data-scroll="" href="#header" id="scroll-to-top" style="display: block;"><i class="arrow_up"></i></a>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script src="../../assets/js/vendor/jquery-1.12.4.min.js"></script>
